--- a/src/components/RigEntry.astro
+++ b/src/components/RigEntry.astro
@@ -17,9 +17,10 @@ const { component } = Astro.props;
     padding-right: 2em;
   }
   td {
-    border-top: 1px dashed #fff;
+    border-top: 1px dashed var(--rig-font-color);
     vertical-align: top;
     padding: 0.5em 0;
+    color: var(--rig-font-color);
   }
   tr:first-child td {
     border-top: none;
