--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -34,19 +34,14 @@ const { default: arrow } = await import("../images/arrow-right.svg?raw");
 
 <style>
   .card {
-    background: #fff;
+    background: var(--color-gray-700);
+    color: var(--color-gray-100);
     -webkit-box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
       0 3px 3px -2px rgba(0, 0, 0, 0.2), 0 1px 8px 0 rgba(0, 0, 0, 0.12);
     box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
       0 3px 3px -2px rgba(0, 0, 0, 0.2), 0 1px 8px 0 rgba(0, 0, 0, 0.12);
     border-radius: 2px;
     overflow: hidden;
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-transition: -webkit-transform 0.1s ease-in-out;
-    transition: -webkit-transform 0.1s ease-in-out;
-    transition: transform 0.1s ease-in-out;
-    transition: transform 0.1s ease-in-out, -webkit-transform 0.1s ease-in-out;
     position: relative;
   }
   .card p {
@@ -63,9 +58,10 @@ const { default: arrow } = await import("../images/arrow-right.svg?raw");
     bottom: 0;
     left: 0;
   }
-  .card > svg {
-    width: 100%;
-    height: auto;
-    overflow: hidden;
+
+  @media (prefers-color-scheme: dark) {
+    .card > div {
+      filter: brightness(0.75);
+    }
   }
 </style>
