--- a/src/components/SectionGrid.astro
+++ b/src/components/SectionGrid.astro
@@ -23,10 +23,10 @@ const { title } = Astro.props;
     grid-gap: 2em;
   }
   section h2 {
+    color: var(--color-gray-100);
     font-size: 34px;
     font-weight: 600;
     line-height: 45px;
-    opacity: 0.5;
     margin-top: 0;
   }
   @media (min-width: 37rem) {
