follow commit for rig title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,7 +86,10 @@ import Card from '../components/Card.astro';
     />
   </SectionGrid>
 
-  <Rig href="https://pcpartpicker.com/user/Nycxin/saved/#view=nZb6rH">
+  <Rig
+    title="Rig"
+    href="https://pcpartpicker.com/user/Nycxin/saved/#view=nZb6rH"
+  >
     <RigEntry component="CPU"
       >AMD - Ryzen 9 3950X 4.7Ghz Sixteen-Core Processor</RigEntry
     >
