--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,22 +10,38 @@
 <style>
   header {
     background-repeat: no-repeat;
-    background-position: center 5%;
+    background-position: center 15%;
     background-size: cover;
     background-color: var(--color-gray-700);
-    background-image: svg-load("../images/logo.svg"),
+    background-image: svg-load('../images/logo.svg'),
       linear-gradient(
         0deg,
-        hsla(0, 0%, 0%, 0.2) 5%,
+        var(--main-bg-color) 5%,
         hsla(0, 0%, 100%, 0.5) 100%
       );
-    height: clamp(15rem, 50vw, 60rem);
+    height: clamp(20rem, 50vw, 50rem);
   }
 
   @media (prefers-color-scheme: dark) {
     header {
-      background-color: var(--color-gray-400);
-      background-blend-mode: color-burn;
+      background-color: var(--color-gray-700);
+      position: relative;
+      margin-bottom: 2rem;
+    }
+
+    header::after {
+      content: '';
+      inset: 0rem;
+      top: calc(100% - 0.1rem);
+      bottom: -5rem;
+      background-image: linear-gradient(
+        0deg,
+        rgba(0, 153, 255, 0) 0%,
+        rgba(0, 153, 255, 1) 80%
+      );
+      position: absolute;
+      display: block;
+      z-index: 1;
     }
 
     h1 {
@@ -52,15 +68,12 @@
 
   @media (min-width: 33rem) {
     header {
-      background-position: center 25%;
+      background-position: center 45%;
     }
   }
   @media (min-width: 66rem) {
     header {
       grid-column: 1 / span 3;
-      background-position: center 35%;
-
-      /* height: 80vh; */
       overflow: hidden;
       -webkit-box-sizing: border-box;
       box-sizing: border-box;
