removed unneccesary license text

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,23 +2,10 @@
 ---
 
 <footer>
-  Wave Background Author:
-  <a
-    target="_blank"
-    rel="noopener"
-    href="http://www.webdesignhot.com/free-vector-graphics/blue-water-wave-vector-illustration/"
-    >Vector Graphics</a
-  >
-  modified by Gummientchen<br />Licence:
-  <a
-    target="_blank"
-    rel="noopener"
-    href="https://creativecommons.org/licenses/by/3.0/legalcode"
-    >Creative Commons Attribution 3.0</a
-  ><br /><br />All product names, logos, and brands are property of their
-  respective owners. All company, product and service names used in this website
-  are for identification purposes only. Use of these names, logos, and brands
-  does not imply endorsement.<br />
+  All product names, logos, and brands are property of their respective owners.
+  All company, product and service names used in this website are for
+  identification purposes only. Use of these names, logos, and brands does not
+  imply endorsement.<br />
 </footer>
 
 <style>
