added printables card in social

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import SectionGrid from '../components/SectionGrid.astro';
-import Rig from '../components/Rig.astro';
-import RigEntry from '../components/RigEntry.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import SectionGrid from "../components/SectionGrid.astro";
+import Rig from "../components/Rig.astro";
+import RigEntry from "../components/RigEntry.astro";
+import Card from "../components/Card.astro";
 ---
 
 <Layout title="Gummientchen" description="Gummientchen, they also wanna play!">
@@ -83,6 +83,13 @@ import Card from '../components/Card.astro';
       description="#Hashtag"
       svg="twitter"
       buttonhref="https://twitter.com/Gummientchen_"
+    />
+    <Card
+      service="Printables"
+      gamertag="Gummientchen"
+      description="A happy little printer"
+      svg="printables"
+      buttonhref="https://www.printables.com/social/11871-gummientchen/about"
     />
   </SectionGrid>
 
