--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -95,25 +95,25 @@ import Card from "../components/Card.astro";
 
   <Rig
     title="Rig"
-    href="https://pcpartpicker.com/user/Nycxin/saved/#view=nZb6rH"
+    href="https://pcpartpicker.com/user/Nycxin/saved/#view=Bm8rGX"
   >
     <RigEntry component="CPU"
-      >AMD - Ryzen 9 3950X 4.7Ghz Sixteen-Core Processor</RigEntry
+      >AMD - Ryzen 9 7950X3D 5.7Ghz Sixteen-Core Processor</RigEntry
     >
     <RigEntry component="GPU"
       >Asus - TUF Gaming GeForce RTX® 4090 OC Edition 24GB GDDR6X</RigEntry
     >
     <RigEntry component="RAM"
-      >Corsair - Vengeance LPX Black 32GB (2 x 16GB) DDR4-3600 Memory</RigEntry
+      >G.Skill - Trident Z5 Neo 64GB (2 x 32GB) DDR5-6000 CL30 Memory</RigEntry
     >
     <RigEntry component="Motherboard"
-      >Asus - Rog Strix X570-E Gaming ATX AM4 Motherboard</RigEntry
+      >Asus - ROG Strix X670E-E Gaming Wifi AM5 Motherboard</RigEntry
     >
     <RigEntry component="Storage"
       >Samsung - 980 PRO NVMe M.2 2280 1 TB Solid State Drive<br />Samsung - 860
       QVO 2TB 2.5" Solid State Drive</RigEntry
     >
-    <RigEntry component="CPU Cooler">Noctua - NH-D15 SE-AM4 CPU Cooler</RigEntry
+    <RigEntry component="CPU Cooler">Corsair - iCUE H150i Elite Capellix XT w/ LCD Upgrade</RigEntry
     >
     <RigEntry component="Case">Fractal - Meshify S2 Black - Dark TG</RigEntry>
     <RigEntry component="Power Supply">Seasonic - Prime Platinum 1300W</RigEntry
