cleaned up formatting and added rig entry for display

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,26 +97,17 @@ import Card from "../components/Card.astro";
     title="Rig"
     href="https://pcpartpicker.com/user/Nycxin/saved/#view=Bm8rGX"
   >
-    <RigEntry component="CPU"
-      >AMD - Ryzen 9 7950X3D 5.7Ghz Sixteen-Core Processor</RigEntry
-    >
-    <RigEntry component="GPU"
-      >Asus - TUF Gaming GeForce RTX® 4090 OC Edition 24GB GDDR6X</RigEntry
-    >
-    <RigEntry component="RAM"
-      >G.Skill - Trident Z5 Neo 64GB (2 x 32GB) DDR5-6000 CL30 Memory</RigEntry
-    >
-    <RigEntry component="Motherboard"
-      >Asus - ROG Strix X670E-E Gaming Wifi AM5 Motherboard</RigEntry
-    >
-    <RigEntry component="Storage"
-      >Samsung - 980 PRO NVMe M.2 2280 1 TB Solid State Drive<br />Samsung - 860
-      QVO 2TB 2.5" Solid State Drive</RigEntry
-    >
-    <RigEntry component="CPU Cooler">Corsair - iCUE H150i Elite Capellix XT w/ LCD Upgrade</RigEntry
-    >
+    <RigEntry component="CPU">AMD - Ryzen 9 7950X3D 5.7Ghz Sixteen-Core Processor</RigEntry>
+    <RigEntry component="GPU">Asus - TUF Gaming GeForce RTX® 4090 OC Edition 24GB GDDR6X</RigEntry>
+    <RigEntry component="RAM">G.Skill - Trident Z5 Neo 64GB (2 x 32GB) DDR5-6000 CL30 Memory</RigEntry>
+    <RigEntry component="Motherboard">Asus - ROG Strix X670E-E Gaming Wifi AM5 Motherboard</RigEntry>
+    <RigEntry component="Storage">
+      Samsung - 980 PRO NVMe M.2 2280 1 TB Solid State Drive<br />
+      Samsung - 860QVO 2TB 2.5" Solid State Drive
+    </RigEntry>
+    <RigEntry component="CPU Cooler">Corsair - iCUE H150i Elite Capellix XT w/ LCD Upgrade</RigEntry>
     <RigEntry component="Case">Fractal - Meshify S2 Black - Dark TG</RigEntry>
-    <RigEntry component="Power Supply">Seasonic - Prime Platinum 1300W</RigEntry
-    >
+    <RigEntry component="Power Supply">Seasonic - Prime Platinum 1300W</RigEntry>
+    <RigEntry component="Display">BenQ - 34" Ultrawide EX3415R</RigEntry>
   </Rig>
 </Layout>
