added secondary displays

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -108,6 +108,10 @@ import Card from "../components/Card.astro";
     <RigEntry component="CPU Cooler">Corsair - iCUE H150i Elite Capellix XT w/ LCD Upgrade</RigEntry>
     <RigEntry component="Case">Fractal - Meshify S2 Black - Dark TG</RigEntry>
     <RigEntry component="Power Supply">Seasonic - Prime Platinum 1300W</RigEntry>
-    <RigEntry component="Display">BenQ - 34" Ultrawide EX3415R</RigEntry>
+    <RigEntry component="Main Display">BenQ - 34" Ultrawide EX3415R</RigEntry>
+    <RigEntry component="Secondary Displays">
+      Samsung - LS34J550WQUXEN<br />
+      DELL - S2417DG
+    </RigEntry>
   </Rig>
 </Layout>
