--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<header>
+<header id="header">
   <h1>
     <slot />
   </h1>
@@ -13,35 +13,36 @@
     background-position: center 15%;
     background-size: cover;
     background-color: var(--color-gray-700);
-    background-image: svg-load('../images/logo.svg'),
+    background-image: svg-load("../images/logo.svg"),
       linear-gradient(
         0deg,
         var(--main-bg-color) 5%,
         hsla(0, 0%, 100%, 0.5) 100%
       );
     height: clamp(20rem, 50vw, 50rem);
+
+    position: sticky;
+    top: 0;
+
+    z-index: 0;
+
+    animation: fade 1s linear;
+    animation-play-state: paused;
+    animation-delay: calc(var(--scroll) * -1s);
+  }
+
+  @keyframes fade {
+    to {
+      opacity: 0;
+    }
   }
 
   @media (prefers-color-scheme: dark) {
     header {
       background-color: var(--color-gray-700);
-      position: relative;
-      margin-bottom: 2rem;
-    }
 
-    header::after {
-      content: '';
-      inset: 0rem;
-      top: calc(100% - 0.1rem);
-      bottom: -5rem;
-      background-image: linear-gradient(
-        0deg,
-        rgba(0, 153, 255, 0) 0%,
-        rgba(0, 153, 255, 1) 80%
-      );
-      position: absolute;
-      display: block;
-      z-index: 1;
+      position: sticky;
+      top: 0;
     }
 
     h1 {
