fixed padding bug introduced with latest change

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -117,7 +117,7 @@ const { title, description } = Astro.props;
       }
 
       .container > * + * {
-        padding: 2rem 0;
+        padding-block: 2rem;
       }
 
       .container section:first-of-type {
