implemented dark/light mode for svgs

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -99,6 +99,10 @@ const { title, description } = Astro.props;
 
           --button-bright-color: var(--color-gray-100);
         }
+
+        svg.svgthemed {
+          fill: #fff;
+        }
       }
 
       html,
