added new section with games

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ import Card from "../components/Card.astro";
       gamertag="GummientchenCH#1337"
       description="So many Wifus!"
       svg="riot"
-      buttonhref="https://tracker.gg/valorant/profile/riot/GummientchenCH%231337/overview"
+      buttonhref="https://tracker.gg/valorant/profile/riot/GummientchenCH%231337/overview?playlist=unrated&season=all"
     />
   </SectionGrid>
 
@@ -93,21 +93,61 @@ import Card from "../components/Card.astro";
     />
   </SectionGrid>
 
+  <SectionGrid title="Games">
+    <Card
+      service="Valorant"
+      gamertag="GummientchenCH"
+      description="Pew Pew Pew"
+      svg="valorant"
+      buttonhref="https://tracker.gg/valorant/profile/riot/GummientchenCH%231337/overview?playlist=unrated&season=all"
+    />
+    <Card
+      service="CSGO"
+      gamertag="Gummientchen"
+      description="Bomb has been planted"
+      svg="csgo"
+      buttonhref="https://tracker.gg/valorant/profile/riot/GummientchenCH%231337/overview?playlist=unrated&season=all"
+    />
+    <Card
+      service="Rocket League"
+      gamertag="Gummientchen"
+      description="Calculated"
+      svg="rocketleague"
+    />
+    <Card
+      service="Modern Warfare II"
+      gamertag="Gummientchen"
+      description="Steamin’ Jesus"
+      svg="codmw2"
+    />
+  </SectionGrid>
+
   <Rig
     title="Rig"
     href="https://pcpartpicker.com/user/Nycxin/saved/#view=Bm8rGX"
   >
-    <RigEntry component="CPU">AMD - Ryzen 9 7950X3D 5.7Ghz Sixteen-Core Processor</RigEntry>
-    <RigEntry component="GPU">Asus - TUF Gaming GeForce RTX® 4090 OC Edition 24GB GDDR6X</RigEntry>
-    <RigEntry component="RAM">G.Skill - Trident Z5 Neo 64GB (2 x 32GB) DDR5-6000 CL30 Memory</RigEntry>
-    <RigEntry component="Motherboard">Asus - ROG Strix X670E-E Gaming Wifi AM5 Motherboard</RigEntry>
+    <RigEntry component="CPU"
+      >AMD - Ryzen 9 7950X3D 5.7Ghz Sixteen-Core Processor</RigEntry
+    >
+    <RigEntry component="GPU"
+      >Asus - TUF Gaming GeForce RTX® 4090 OC Edition 24GB GDDR6X</RigEntry
+    >
+    <RigEntry component="RAM"
+      >G.Skill - Trident Z5 Neo 64GB (2 x 32GB) DDR5-6000 CL30 Memory</RigEntry
+    >
+    <RigEntry component="Motherboard"
+      >Asus - ROG Strix X670E-E Gaming Wifi AM5 Motherboard</RigEntry
+    >
     <RigEntry component="Storage">
       Samsung - 980 PRO NVMe M.2 2280 1 TB Solid State Drive<br />
       Samsung - 860QVO 2TB 2.5" Solid State Drive
     </RigEntry>
-    <RigEntry component="CPU Cooler">Corsair - iCUE H150i Elite Capellix XT w/ LCD Upgrade</RigEntry>
+    <RigEntry component="CPU Cooler"
+      >Corsair - iCUE H150i Elite Capellix XT w/ LCD Upgrade</RigEntry
+    >
     <RigEntry component="Case">Fractal - Meshify S2 Black - Dark TG</RigEntry>
-    <RigEntry component="Power Supply">Seasonic - Prime Platinum 1300W</RigEntry>
+    <RigEntry component="Power Supply">Seasonic - Prime Platinum 1300W</RigEntry
+    >
     <RigEntry component="Main Display">BenQ - 34" Ultrawide EX3415R</RigEntry>
     <RigEntry component="Secondary Displays">
       Samsung - LS34J550WQUXEN<br />
