added new games and "hype" section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -96,28 +96,37 @@ import Card from "../components/Card.astro";
   <SectionGrid title="Games">
     <Card
       service="Valorant"
-      gamertag="GummientchenCH"
       description="Pew Pew Pew"
       svg="valorant"
       buttonhref="https://tracker.gg/valorant/profile/riot/GummientchenCH%231337/overview?playlist=unrated&season=all"
     />
-    <Card
-      service="CSGO"
-      gamertag="Gummientchen"
-      description="Bomb has been planted"
-      svg="csgo"
-    />
-    <Card
-      service="Rocket League"
-      gamertag="Gummientchen"
-      description="Calculated"
-      svg="rocketleague"
-    />
+    <Card service="CSGO" description="Bomb has been planted" svg="csgo" />
+    <Card service="Rocket League" description="Calculated" svg="rocketleague" />
     <Card
       service="Modern Warfare II"
-      gamertag="Gummientchen"
       description="Steamin’ Jesus"
       svg="codmw2"
+    />
+    <Card
+      service="Factorio"
+      description="The Factory Must Grow!"
+      svg="factorio"
+    />
+    <Card service="Skyrim" description="Fus Ro Dah!" svg="skyrim" />
+    <Card
+      service="Sea of Thieves"
+      description="Fus Ro Dah!"
+      svg="seaofthieves"
+    />
+  </SectionGrid>
+
+  <SectionGrid title="Hype">
+    <Card
+      service="Starfield"
+      gamertag="Gummientchen"
+      description="Pew Pew Pew"
+      svg="starfield"
+      buttonhref="https://tracker.gg/valorant/profile/riot/GummientchenCH%231337/overview?playlist=unrated&season=all"
     />
   </SectionGrid>
 
