fixed description for Sea of Thieves

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -108,7 +108,7 @@ import Card from "../components/Card.astro";
     <Card service="Rocket League" description="Calculated" svg="rocketleague" />
     <Card
       service="Sea of Thieves"
-      description="Fus Ro Dah!"
+      description="You want bannana?"
       svg="seaofthieves"
     />
     <Card service="Skyrim" description="Fus Ro Dah!" svg="skyrim" />
