added links and link suffixes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,6 +59,7 @@ import Card from "../components/Card.astro";
       description="So many Wifus!"
       svg="riot"
       buttonhref="https://tracker.gg/valorant/profile/riot/GummientchenCH%231337/overview?playlist=unrated&season=all"
+      buttonsuffix="Tracker"
     />
   </SectionGrid>
 
@@ -94,39 +95,64 @@ import Card from "../components/Card.astro";
   </SectionGrid>
 
   <SectionGrid title="Games">
-    <Card service="CSGO" description="Bomb has been planted" svg="csgo" />
+    <Card
+      service="CSGO"
+      description="Bomb has been planted"
+      svg="csgo"
+      buttonhref="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/"
+      buttonsuffix="Steam Page"
+    />
     <Card
       service="Factorio"
       description="The Factory Must Grow!"
       svg="factorio"
+      buttonhref="https://store.steampowered.com/app/427520/Factorio/"
+      buttonsuffix="Steam Page"
     />
     <Card
       service="Modern Warfare II"
       description="Steamin’ Jesus"
       svg="codmw2"
+      buttonhref="https://store.steampowered.com/app/1938090/Call_of_Duty_Modern_Warfare_II/"
+      buttonsuffix="Steam Page"
     />
-    <Card service="Rocket League" description="Calculated" svg="rocketleague" />
+    <Card
+      service="Rocket League"
+      description="Calculated"
+      svg="rocketleague"
+      buttonhref="https://store.steampowered.com/app/252950/Rocket_League/"
+      buttonsuffix="Steam Page"
+    />
     <Card
       service="Sea of Thieves"
       description="You want bannana?"
       svg="seaofthieves"
+      buttonhref="https://store.steampowered.com/app/1172620/Sea_of_Thieves_2023_Edition/"
+      buttonsuffix="Steam Page"
     />
-    <Card service="Skyrim" description="Fus Ro Dah!" svg="skyrim" />
+    <Card
+      service="Skyrim"
+      description="Fus Ro Dah!"
+      svg="skyrim"
+      buttonhref="https://store.steampowered.com/app/489830/The_Elder_Scrolls_V_Skyrim_Special_Edition/"
+      buttonsuffix="Steam Page"
+    />
     <Card
       service="Valorant"
       description="Pew Pew Pew"
       svg="valorant"
       buttonhref="https://tracker.gg/valorant/profile/riot/GummientchenCH%231337/overview?playlist=unrated&season=all"
+      buttonsuffix="Tracker"
     />
   </SectionGrid>
 
   <SectionGrid title="Hype">
     <Card
       service="Starfield"
-      gamertag="Gummientchen"
-      description="Pew Pew Pew"
+      description="Where's my Sandwich?!"
       svg="starfield"
-      buttonhref="https://tracker.gg/valorant/profile/riot/GummientchenCH%231337/overview?playlist=unrated&season=all"
+      buttonhref="https://store.steampowered.com/app/1716740/STARFIELD/"
+      buttonsuffix="Steam Page"
     />
   </SectionGrid>
 
