added farming simulator 22 to games

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -110,6 +110,13 @@ import Card from "../components/Card.astro";
       buttonsuffix="Steam Page"
     />
     <Card
+      service="Farming Simulator 22"
+      description="Pepperidge Farm Remembers"
+      svg="fs22"
+      buttonhref="https://store.steampowered.com/app/1248130/Farming_Simulator_22/"
+      buttonsuffix="Steam Page"
+    />
+    <Card
       service="Modern Warfare II"
       description="Steamin’ Jesus"
       svg="codmw2"
