updated rig with new monitor DELL U2722D

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -192,7 +192,7 @@ import Card from "../components/Card.astro";
     <RigEntry component="Main Display">BenQ - 34" Ultrawide EX3415R</RigEntry>
     <RigEntry component="Secondary Displays">
       Samsung - LS34J550WQUXEN<br />
-      DELL - S2417DG
+      DELL - U2722D
     </RigEntry>
   </Rig>
 </Layout>
