--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -112,7 +112,7 @@ import Card from "../components/Card.astro";
     <Card
       service="Farming Simulator 22"
       description="Pepperidge Farm Remembers"
-      svg="fs22"
+      svg="fs22_2"
       buttonhref="https://store.steampowered.com/app/1248130/Farming_Simulator_22/"
       buttonsuffix="Steam Page"
     />
@@ -126,7 +126,7 @@ import Card from "../components/Card.astro";
     <Card
       service="Rocket League"
       description="Calculated"
-      svg="rocketleague"
+      svg="rocketleague_2"
       buttonhref="https://store.steampowered.com/app/252950/Rocket_League/"
       buttonsuffix="Steam Page"
     />
