changed the title of the website

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,7 +32,8 @@ const { title, description } = Astro.props;
   </head>
   <body>
     <div class="container">
-      <Header>Gummientchen, they also wanna play!</Header>
+      <Header>Gummientchen: Igniting Gaming Passion, One Click at a Time</Header
+      >
       <slot />
       <Footer />
     </div>
