--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,10 @@ import RigEntry from "../components/RigEntry.astro";
 import Card from "../components/Card.astro";
 ---
 
-<Layout title="Gummientchen" description="Gummientchen, they also wanna play!">
+<Layout
+  title="Gummientchen"
+  description="Gummientchen: Igniting Gaming Passion, One Click at a Time"
+>
   <SectionGrid title="Gamertags">
     <Card
       service="Steam"
@@ -167,21 +170,19 @@ import Card from "../components/Card.astro";
     title="Rig"
     href="https://pcpartpicker.com/user/Nycxin/saved/#view=Bm8rGX"
   >
-    <RigEntry component="CPU"
-      >AMD - Ryzen 9 7950X3D 5.7Ghz Sixteen-Core Processor</RigEntry
-    >
+    <RigEntry component="CPU">AMD - Ryzen 9 7950X3D 5.7Ghz</RigEntry>
     <RigEntry component="GPU"
       >Asus - TUF Gaming GeForce RTX® 4090 OC Edition 24GB GDDR6X</RigEntry
     >
     <RigEntry component="RAM"
-      >G.Skill - Trident Z5 Neo 64GB (2 x 32GB) DDR5-6000 CL30 Memory</RigEntry
+      >G.Skill - Trident Z5 Neo 64GB (2 x 32GB) DDR5-6000 CL30</RigEntry
     >
     <RigEntry component="Motherboard"
-      >Asus - ROG Strix X670E-E Gaming Wifi AM5 Motherboard</RigEntry
+      >Asus - ROG Strix X670E-E Gaming Wifi AM5</RigEntry
     >
     <RigEntry component="Storage">
-      Samsung - 980 PRO NVMe M.2 2280 1 TB Solid State Drive<br />
-      Samsung - 860QVO 2TB 2.5" Solid State Drive
+      Samsung - 980 PRO NVMe 1TB M.2 2280<br />
+      Samsung - 860QVO 2TB 2.5"
     </RigEntry>
     <RigEntry component="CPU Cooler"
       >Corsair - iCUE H150i Elite Capellix XT w/ LCD Upgrade</RigEntry
