--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,9 @@ import Card from "../components/Card.astro";
 
 <Layout
   title="Gummientchen"
-  description="Gummientchen: Igniting Gaming Passion, One Click at a Time"
+  description="Join Gummientchen on a gaming odyssey like no other. From dominating battlefields to unraveling epic quests, Gummientchen explores pixel realms, leaving no virtual stone unturned."
+  heading="Gummientchen"
+  subheading="Conquering Virtually Everything"
 >
   <SectionGrid title="Gamertags">
     <Card
@@ -182,7 +184,8 @@ import Card from "../components/Card.astro";
     >
     <RigEntry component="Storage">
       Samsung - 980 PRO NVMe 1TB M.2 2280<br />
-      Samsung - 860QVO 2TB 2.5"
+      Samsung - 860QVO 2TB 2.5"<br />
+      WD Black - SN850X Gaming NVMe 4TB M.2 2280
     </RigEntry>
     <RigEntry component="CPU Cooler"
       >Corsair - iCUE H150i Elite Capellix XT w/ LCD Upgrade</RigEntry
@@ -195,5 +198,9 @@ import Card from "../components/Card.astro";
       Samsung - LS34J550WQUXEN<br />
       DELL - U2722D
     </RigEntry>
+    <RigEntry component="Mouse">
+      Logitech - G Pro X Superlight Wireless
+    </RigEntry>
+    <RigEntry component="Keyboard">Ducky - One 2 (MX Blue)</RigEntry>
   </Rig>
 </Layout>
