--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,8 @@ import Card from "../components/Card.astro";
   heading="Gummientchen"
   subheading="Conquering Virtually Everything"
 >
-  <SectionGrid title="Gamertags">
+  <SectionGrid title="Gamertags" transition:animate="slide">
+    <a href="hyped/starfield">Starfield</a>
     <Card
       service="Steam"
       gamertag="Gummientchen"
